deploy/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: web
    name: www
  selector:
    app: app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app
        version: "0.1"
    spec:
      containers:
      - name: app
        image: gcr.io/yowza3d/app:0.1
        command: ["python", "-m", "app.app"]
        ports:
        - name: web
          containerPort: 5000
        readinessProbe:
          httpGet:
            path: /healthz
            port: web
            httpHeaders:
              - name: Host
                value: "app.yowza3d.com"
          periodSeconds: 30
          timeoutSeconds: 20
          successThreshold: 1
          failureThreshold: 3
